# RPS-Dissector

./: .gitignore  README.md  RPS-Specification.md  pkts.py
rps/: CMakeLists.txt  packet-rps.c
